task3/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finalassesment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finalassesment-db
  template:
    metadata:
      labels:
        app: finalassesment-db
    spec:
      containers:
      - name: postgresdb
        image: dewan11415/postgresdb:latest
        ports:
        - containerPort: 5432
