task3/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finalassesment-ingress
spec:
  rules:
    - http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: finalassesment-app
              port:
                number: 6868
