task3/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: finalassesment-db-network-policy
spec:
  podSelector:
    matchLabels:
      app: finalassesment-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: finalassesment-app
